  (these functions have been deprecated for a while and are superseded
   by the functions from module Marshal)
  (François Pottier, review by Gabriel Scherer and Kate Deplaix)

- #10545: Add In_channel and Out_channel modules.
  (Nicolás Ojeda Bär, review by Daniel Bünzli, Simon Cruanes, Gabriel Scherer,
  Guillaume Munch-Maccagnoni, Alain Frisch and Xavier Leroy)

### Other libraries:

- #10192: Add support for Unix domain sockets on Windows and use them
  to emulate Unix.socketpair (only available on Windows 1803+)
  (Antonin Décimo, review by David Allsopp)

- #10469: Add Thread.set_uncaught_exception_handler and
  Thread.default_uncaught_exception_handler.
  (Enguerrand Decorne, review by David Allsopp)

### Tools:

- #3959, #7202, #10476: ocaml, in script mode, directive errors
  (`#use "missing_file";;`) use stderr and exit with an error.
  (Florian Angeletti, review by Gabriel Scherer)

- #10524: Directive argument type error now shows expected and received type.
  (Wiktor Kuchta, review by Gabriel Scherer)

- #10560: Disable colors if the env variable `NO_COLOR` is set.  If
  `OCAML_COLOR` is set, its setting takes precedence over `NO_COLOR`.
  (Nicolás Ojeda Bär, report by Gabriel Scherer, review by Daniel Bünzli,
  Gabriel Scherer and David Allsopp)

- #10565: Toplevel value printing: truncate strings only after 8 bytes.
  (Wiktor Kuchta, review by Xavier Leroy)

### Debugging:

- #10517, #10594: when running ocamldebug on a program linked with the
  threads library, don't fail immediately; instead, allow debugging
  until the program creates a thread for the first time, then fail cleanly.
  (Xavier Leroy, report by @anentropic, review by Gabriel Scherer)

- #9621: Pack the ocamldebug modules to minimize clashes
  (Raphael Sousa Santos, review by Vincent Laviron and Gabriel Scherer)

### Manual and documentation:

- #7812, #10475: reworded the description of the behaviors of
  float->int conversions in case of overflow, and of iterators